# file-hosting-service

./: .envrc  .gitignore  Cargo.toml  Dockerfile.file-exchange  Dockerfile.file-service  Dockerfile.subfile-exchange  Dockerfile.subfile-service  README.md  addresses.json  contributing.md  s3conn.py  simple_s3.sh  template.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: containers.yml  gen-binaries.yml  tests.yml
abis/: Escrow.json  L2Staking.json  Staking.json
docs/: architecture.md  cli_usage.md  client_guide.md  contracts.md  database_migration.md  discovery.md  feature_checklist.md  manifest.md  onchain_guide.md  publisher_guide.md  server-status-schema.json  server_guide.md  subfile_manifest.md
docs/schema/: server-admin-schema.json  server-cost-schema.json
example-file/: graph-node-simple.sql.torrent  subfile.yaml
file-exchange/: Cargo.toml
file-exchange/benches/: hash_chunk.rs  new_file_manifest.rs  read_and_validate_file.rs  read_chunk.rs  validate_local.rs  verify_chunk.rs
file-exchange/src/: config.rs  errors.rs  lib.rs  main.rs  test_util.rs  util.rs
file-exchange/src/discover/: mod.rs
file-exchange/src/download_client/: mod.rs  range_request.rs  signer.rs
file-exchange/src/graphql/: cost_query.rs  escrow_query.rs  mod.rs  network_query.rs  status_query.rs
file-exchange/src/manifest/: file_hasher.rs  file_reader.rs  ipfs.rs  local_file_system.rs  manifest_fetcher.rs  mod.rs  remote_object_store.rs  store.rs
file-exchange/src/publisher/: mod.rs
file-exchange/src/transaction_manager/: escrow.rs  graph_token.rs  mod.rs  staking.rs
file-exchange/tests/: allocate.rs  discovery.rs  file_transfer.rs  setup.rs  test0.toml  test1.toml  test_vectors.rs
file-service/: Cargo.toml
file-service/src/: admin.rs  config.rs  database.rs  lib.rs  main.rs  metrics.rs
file-service/src/file_server/: admin.rs  cost.rs  files.rs  mod.rs  range.rs  routes.rs  service.rs  service_routes.rs  status.rs  util.rs
scripts/: commit-msg.sh  exchange-release.sh  file-exchange-release.sh  release.sh  service-release.sh
src/: config.rs  ipfs.rs  leecher.rs  lib.rs  main.rs  seeder.rs  types.rs
subfile-cli/: Cargo.toml  README.md
subfile-cli/src/: builder.rs  config.rs  file_hasher.rs  ipfs.rs  leecher.rs  lib.rs  main.rs  publisher.rs  seeder.rs  subfile_reader.rs  types.rs
subfile-cli/src/subfile_client/: mod.rs
subfile-cli/src/subfile_server/: mod.rs  range.rs  util.rs
subfile-cli/src/torrent/: create.rs
subfile-exchange/: Cargo.toml
subfile-exchange/benches/: new_chunk_file.rs  read_and_validate_file.rs  read_chunk.rs  validate_local_subfile.rs  verify_chunk.rs  write_chunk_file.rs
subfile-exchange/src/: config.rs  errors.rs  file_hasher.rs  file_reader.rs  ipfs.rs  lib.rs  main.rs  publisher.rs  subfile.rs  subfile_reader.rs  test_util.rs  types.rs  util.rs
subfile-exchange/src/publisher/: mod.rs
subfile-exchange/src/subfile/: file_hasher.rs  ipfs.rs  local_file_system.rs  mod.rs  subfile_reader.rs
subfile-exchange/src/subfile_client/: mod.rs  signer.rs
subfile-exchange/src/subfile_finder/: mod.rs
subfile-exchange/src/subfile_server/: admin.rs  mod.rs  range.rs  util.rs
subfile-exchange/src/transaction_manager/: mod.rs  staking.rs
subfile-exchange/tests/: allocate.rs  discovery.rs  file_transfer.rs
subfile-service/: Cargo.toml
subfile-service/src/: config.rs  lib.rs  main.rs
subfile-service/src/subfile_server/: admin.rs  mod.rs  range.rs  routes.rs  util.rs
torrent_helper/: Cargo.toml
torrent_helper/src/: bytes.rs  common.rs  consts.rs  env.rs  error.rs  file_info.rs  files.rs  hasher.rs  host_port.rs  host_port_parse_error.rs  info.rs  infohash.rs  input_target.rs  into_usize.rs  lib.rs  lint.rs  magnet_link.rs  magnet_link_parse_error.rs  main.rs  md5_digest.rs  metainfo.rs  metainfo_error.rs  mode.rs  options.rs  output_target.rs  piece_length_picker.rs  piece_list.rs  shell.rs  sort_spec.rs  subcommand.rs  test_env.rs  torrent_summary.rs  use_color.rs  walker.rs
torrent_helper/src/subcommand/: torrent.rs
torrent_helper/src/subcommand/torrent/: create.rs  show.rs  verify.rs
torrent_helper/src/subcommand/torrent/create/: create_content.rs
torrent_leecher/: Cargo.toml
torrent_leecher/src/: lib.rs
torrent_leecher/src/util/: buffers.rs  mod.rs  sha1w.rs
torrent_leecher/src/util/dht/: bprotocol.rs  dht.rs  mod.rs  persistence.rs  routing_table.rs  utils.rs
torrent_leecher/src/util/librqbit/: chunk_tracker.rs  dht_utils.rs  file_ops.rs  http_api.rs  http_api_client.rs  mod.rs  peer_connection.rs  peer_state.rs  session.rs  torrent_manager.rs  torrent_state.rs  tracker_comms.rs
torrent_leecher/src/util/librqbit/peer_info_reader/: mod.rs
torrent_leecher/src/util/librqbit_core/: lengths.rs  magnet.rs  peer_id.rs  torrent_metainfo.rs
torrent_leecher/src/util/peer_binary_protocol/: mod.rs
torrent_leecher/src/util/peer_binary_protocol/extended/: handshake.rs  mod.rs  ut_metadata.rs
torrent_leecher/src/util/rqbit_bencode/: bencode_value.rs  mod.rs  serde_bencode_de.rs  serde_bencode_ser.rs
