[package]
name = "file-exchange"
version = "0.0.1"
edition = "2021"
authors = ["hopeyen <hope@graphops.xyz>"]
rust-version = "1.72"
description = "File Hosting Service"
readme = "README.md"
license = "Apache-2.0"
keywords = ["https", "file"]
categories = ["command-line-interface", "filesystem", "web-programming::http-server", "web-programming::http-client"]

[[bin]]
name = "file-exchange"
path = "src/main.rs"

[dependencies]
alloy-sol-types = { version = "0.6.0", features = ["eip712-serde"] }
alloy-primitives = { version = "0.6.0", features = ["serde"] }
graphql-http = { git = "https://github.com/edgeandnode/toolshed", tag = "graphql-http-v0.2.1", features = [
  "http-reqwest",
] }
tap_core = { git = "https://github.com/semiotic-ai/timeline-aggregation-protocol" }
anyhow = "1.0"
bs58 = "0.5.0"
base64 = "0.21"
build-info = "0.0.34"
bytes = "1.0"
chrono = "0.4.31"
clap = { version = "4.4", features = ["cargo", "unstable-doc"] }
confy = "0.6"
ctrlc = "3.4.4"
derive-getters = "0.3.0"
dotenv = "0.15"
ethers = "2.0.11"
# ethers = {version = "2.0.11", features = [  "abigen-online" ]}
ethers-core = "2.0.11"
futures = { version = "0.3", features = ["compat"] }
async-graphql = "7.0.1"
hdwallet = "0.4.1"
hex = "0.4.3"
http = "1.0"
hyper = { version = "1.1", features = [ "server" ]}
ipfs-api-backend-hyper = "0.6"
ipfs-api-prelude = "0.6"
merkle-cbt = "0.3.2"
object_store = {version = "0.9", features = [ "http", "aws", "gcp", "azure" ]}
rand = "0.8.4"
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }
rustls = "0.22"
rustls-pemfile = "2.0"
secp256k1 = "0.28.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3.2.0"
tokio = { version = "1.28", features = ["time", "sync", "macros", "test-util", "rt-multi-thread"] }
tokio-retry = "0.3"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "ansi",
    "fmt",
    "std",
    "json",
] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_futures"] }
wiremock = "0.5.19"
lazy_static = "1.4.0"
thegraph = { git = "https://github.com/edgeandnode/toolshed", tag = "thegraph-v0.5.0" }
graphql-http = { git = "https://github.com/edgeandnode/toolshed", tag = "graphql-http-v0.2.1", features = [
  "http-reqwest",
] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"]

[build-dependencies]
build-info-build = "0.0.34"

[[bench]]
name = "read_chunk"
harness = false

[[bench]]
name = "read_and_validate_file"
harness = false

[[bench]]
name = "validate_local"
harness = false

[[bench]]
name = "new_file_manifest"
harness = false

[[bench]]
name = "hash_chunk"
harness = false
