[package]
name = "file-service"
version = "0.0.1"
edition = "2021"
authors = ["hopeyen <hope@graphops.xyz>"]
rust-version = "1.72"
description = "File hosting service"
readme = "README.md"
license = "Apache-2.0"

[[bin]]
name = "file-service"
path = "src/main.rs"

[dependencies]
file-exchange = { path = "../file-exchange" }
indexer-common = { package = "indexer-common", git = "https://github.com/graphprotocol/indexer-rs", rev = "b13bd8a" }
thegraph = { git = "https://github.com/edgeandnode/toolshed", tag = "thegraph-v0.5.0" }
anyhow = "1.0"
async-graphql = "6.0.11"
async-graphql-axum = "6.0.11"
axum = "0.6.20"
sha3 = "0.10.6"
base64 = "0.21"
build-info = "0.0.34"
bytes = "1.0"
chrono = "0.4.31"
clap = { version = "4.4", features = ["cargo", "unstable-doc"] }
confy = "0.5"
derive-getters = "0.3.0"
dotenv = "0.15"
ethers = "2.0.10"
ethers-core = "2.0.10"
figment = { version = "0.10", features = ["toml", "env"] }
futures = { version = "0.3", features = ["compat"] }
hex = "0.4.3"
http = "0.2"
hyper = { version = "0.14.27", features = [ "server" ]}
ipfs-api-backend-hyper = "0.6"
ipfs-api-prelude = "0.6"
merkle-cbt = "0.3.2"
prometheus = "0.13.3"
rand = "0.8.4"
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }
rustls = "0.21.8"
rustls-pemfile = "1.0.3"
secp256k1 = "0.28.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10.8"
sqlx = { version = "0.7.1", features = [
    "postgres",
    "runtime-tokio",
    "bigdecimal",
    "rust_decimal",
    "time",
    "migrate",
] }
tempfile = "3.2.0"
thiserror = "1.0.49"
tokio = { version = "1.28", features = ["time", "sync", "macros", "test-util", "rt-multi-thread"] }
tokio-retry = "0.3"
toml = "0.7.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "ansi",
    "fmt",
    "std",
    "json",
] }
console-subscriber = "0.2.0"

[dev-dependencies]
axum-macros = "0.4.1"
criterion = "0.5"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"]

[build-dependencies]
build-info-build = "0.0.34"
