[package]
name = "subfile-cli"
version = "0.1.0"
edition = "2021"
authors = ["hopeyen <hope@graphops.xyz>"]
rust-version = "1.72"
description = "Subfile data service - hackathon"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.4", features = ["cargo", "unstable-doc"] }
dotenv = "0.15"
hyper = { version = "0.14.27", features = [ "server" ]}
rustls = "0.21.8"
rustls-pemfile = "1.0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
confy = "0.5"
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }
futures = { version = "0.3", features = ["compat"] }
tokio = { version = "1.28", features = ["time", "sync", "macros", "test-util", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "ansi",
    "fmt",
    "std",
    "json",
] }
ipfs-api-backend-hyper = "0.6"
ipfs-api-prelude = "0.6"
tokio-retry = "0.3"
http = "0.2"
bytes = "1.0"
cid = "0.10"
merkle-cbt = "0.3.2"
sha2 = "0.10.8"
tempfile = "3.2.0"
rand = "0.8.4"
hex = "0.4.3"


# [[bin]]
# name = "rqbit"
# path = "rqbit"
