[package]
name = "subfile-exchange"
version = "0.0.1"
edition = "2021"
authors = ["hopeyen <hope@graphops.xyz>"]
rust-version = "1.72"
description = "Subfile data service - file exchange"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
base64 = "0.21"
bytes = "1.0"
chrono = "0.4.31"
clap = { version = "4.4", features = ["cargo", "unstable-doc"] }
confy = "0.5"
derive-getters = "0.3.0"
dotenv = "0.15"
ethers = "2.0.10"
ethers-core = "2.0.10"
futures = { version = "0.3", features = ["compat"] }
hex = "0.4.3"
http = "0.2"
hyper = { version = "0.14.27", features = [ "server" ]}
ipfs-api-backend-hyper = "0.6"
ipfs-api-prelude = "0.6"
merkle-cbt = "0.3.2"
rand = "0.8.4"
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }
rustls = "0.21.8"
rustls-pemfile = "1.0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10.8"
tempfile = "3.2.0"
tokio = { version = "1.28", features = ["time", "sync", "macros", "test-util", "rt-multi-thread"] }
tokio-retry = "0.3"
toml = "0.7.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "ansi",
    "fmt",
    "std",
    "json",
] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "read_chunk"
harness = false

[[bench]]
name = "read_and_validate_file"
harness = false
