[package]
name = "subfile-exchange"
version = "0.0.1"
edition = "2021"
authors = ["hopeyen <hope@graphops.xyz>"]
rust-version = "1.72"
description = "Subfile data service - file exchange"
readme = "README.md"
license = "Apache-2.0"

[[bin]]
name = "subfile-exchange"
path = "src/main.rs"

[dependencies]
alloy-sol-types = { version = "0.5.0", features = ["eip712-serde"] }
alloy-primitives = { version = "0.5.0", features = ["serde"] }
anyhow = "1.0"
bs58 = "0.5.0"
base64 = "0.21"
build-info = "0.0.34"
bytes = "1.0"
chrono = "0.4.31"
clap = { version = "4.4", features = ["cargo", "unstable-doc"] }
confy = "0.5"
derive-getters = "0.3.0"
dotenv = "0.15"
ethers = "2.0.11"
# ethers = {version = "2.0.11", features = [  "abigen-online" ]}
ethers-core = "2.0.11"
futures = { version = "0.3", features = ["compat"] }
hdwallet = "0.4.1"
hex = "0.4.3"
http = "0.2"
hyper = { version = "0.14.27", features = [ "server" ]}
ipfs-api-backend-hyper = "0.6"
ipfs-api-prelude = "0.6"
merkle-cbt = "0.3.2"
object_store = {version = "0.8.0", features = [ "http", "aws", "gcp", "azure" ]}
rand = "0.8.4"
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }
rustls = "0.21.8"
rustls-pemfile = "1.0.3"
secp256k1 = "0.28.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tap_core = { version = "0.7.0", git = "https://github.com/semiotic-ai/timeline-aggregation-protocol" }
tempfile = "3.2.0"
tokio = { version = "1.28", features = ["time", "sync", "macros", "test-util", "rt-multi-thread"] }
tokio-retry = "0.3"
toml = "0.7.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "ansi",
    "fmt",
    "std",
    "json",
] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_futures"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"]

[build-dependencies]
build-info-build = "0.0.34"

[[bench]]
name = "read_chunk"
harness = false

[[bench]]
name = "read_and_validate_file"
harness = false

[[bench]]
name = "validate_local_subfile"
harness = false

[[bench]]
name = "new_chunk_file"
harness = false

[[bench]]
name = "verify_chunk"
harness = false
