[package]
name = "torrent_leecher"
description = "A bittorent leecher, taken from rqbit"
version = "2.0.0"
authors = ["Igor Katson <igor.katson@gmail.com>"]
edition = "2018"

# [features]
# default = ["sha1-system", "default-tls"]
# sha1-system = ["librqbit/sha1-system"]
# sha1-openssl = ["librqbit/sha1-openssl"]
# sha1-rust = ["librqbit/sha1-rust"]
# default-tls = ["librqbit/default-tls"]
# rust-tls = ["librqbit/rust-tls"]

[dependencies]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# buffers = {path = "../buffers"}
# librqbit_core = {path = "../librqbit_core"}
# clone_to_owned = {path = "../clone_to_owned"}
# peer_binary_protocol = {path = "../peer_binary_protocol"}
# sha1w = {path = "../sha1w", default-features=false}
# librqbit = {path="../librqbit", default-features=false}
# dht = {path="../dht"}
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
anyhow = "1"
clap = {version = "4", features = ["derive", "deprecated"]}
pretty_env_logger = "0.4"
regex = "1"
futures = "0.3"
parse_duration = "2"
reqwest = "*"
serde = {version = "1", features=["derive"]}
serde_json = "1"
size_format = "1"
tracing = "0.1.37"
axum = {version = "0.6"}
tokio-stream = {version = "0.1", features = ["sync"]}
serde_urlencoded = "*"
itertools = "0.11.0"
indexmap = "1.7"
directories = "4"
http = "0.2"
urlencoding = "2"
byteorder = "1"
bincode = "1"
bitvec = "1"
parking_lot = "0.12"
log = "0.4"
rand = "0.8"
openssl = {version="0.10"}
crypto-hash = {version="0.3"}
sha1 = {version = "0.10", optional=true}
uuid = {version = "1.2", features = ["v4"]}
url = "2"
hex = "0.4"

[dev-dependencies]
pretty_env_logger = "0.4"
futures = {version = "0.3"}


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
